[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["wujiayi <wujiayi.chris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.17.0"
pyright = "^0.0.13"
pyupgrade = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
black = "^24.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
